--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,24 @@
 .cabeçalho_menu-hamburguer{
     width: 24px;
     height: 24px;
-    background: url("../img/Menu.svg");
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 
+.cabeçalho{
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+}
+
+.container_imagem{
+    padding: 1em;
+}
