--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 @import url(/styles/header.css);
+@import url(/styles/banner.css);
 
 :root{
     --cor-de-fundo:#EBECEE;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
 }
 
 body{
     background-color: var(--cor-de-fundo);
+    font-family: "Poppins";
+    font-size: 16px;
+    font-weight: 400;
 }
 
