--- a/styles/banner.css
+++ b/styles/banner.css
@@ -14,3 +14,21 @@
     font-weight: 500;
     margin: 1em 0;
 }
+
+.banner_pesquisa{
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    color: #ffffff;
+    border-radius: 24px;
+    padding: 1em;
+    width: 100%;
+}
+
+.banner_pesquisa::placeholder{
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: #ffffff;
+    background: url(../img/Pesquisa.svg) no-repeat;
+    background-position: 1em;
+}
