--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -8,3 +8,15 @@
     padding: 1em 0 0.5em 0;
 }
 
+.swiper-slide img{
+    width: 100%;
+}
+
+.swiper-button-prev, .swiper-button-next{
+    display: none;
+}
+
+.swiper-pagination{
+    position: initial;
+    margin: .5em 0;
+}
