--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -20,3 +20,53 @@
     position: initial;
     margin: .5em 0;
 }
+
+.card_descrição{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card_botões{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botões{
+    display: flex;
+}
+
+.card{
+    background: white;
+    box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+
+.descrição_titulo{
+    font-weight: 700;
+    color: var(--laranja);
+}
+
+.descrição_titulo-livro{
+    color: #002F52;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+}
+
+.descrição_texto{
+    font-size: 14px;
+}
+
+.botões_item{
+    margin: 0 0.5em;
+}
+
+.botões_ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+}
