--- a/styles/header.css
+++ b/styles/header.css
@@ -56,3 +56,46 @@
 .container_botao{
     display:none;
 }
+
+.container_titulo, .opções{
+    display: none;
+}
+
+@media screen and (min-width: 1024px){
+    .container_titulo, .container_titulo_negrito{
+        font-family: 'Josefin Sans', sans-serif;
+        font-size:30px;
+    }
+
+    .container_titulo{
+        font-weight: 400;
+        display: block;
+    }
+
+    .container_titulo_negrito{
+        font-weight: 700;
+    }
+
+    .opções{
+        display: flex;
+    }
+
+    .opções_item{
+        padding:1em;
+        text-transform: uppercase;
+    }
+
+    .opções_link{
+        text-decoration: none;
+        color: black;
+    }
+
+    .container_imagem_transparente, .cabeçalho_menu-hamburguer, .opções_botão{
+        display: none;
+    }
+
+    .opções_botão:checked~.lista-menu{
+        display: block;
+        width: auto;
+    }
+}
