--- a/styles/banner.css
+++ b/styles/banner.css
@@ -32,3 +32,18 @@
     background: url(../img/Pesquisa.svg) no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width:1024px){
+    .banner_titulo{
+        font-size:36px;
+    }
+
+    .banner_pesquisa{
+        width:50%;
+    }
+
+    .banner_pesquisa::placeholder{
+        background-position: 7em;
+        background-position-y: -.20em;
+    }
+}
