--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -75,3 +75,27 @@
 .descrição_estrelas{
     margin-bottom: 0.5em;
 }
+
+@media screen and (min-width:1024px){
+    .carrossel_titulo{
+        font-size:26px;
+    }
+
+    .swiper-pagination{
+        margin: 2em 0 3em;
+    }
+
+    .swiper{
+        width: 60%;
+    }
+
+    .swiper-button-prev, .swiper-button-next{
+        display: block;
+        top:60%;
+    }    
+
+    .card{
+        width: 40%;
+        margin: 2em auto;
+    }
+}
