--- a/styles/contato.css
+++ b/styles/contato.css
@@ -30,8 +30,29 @@
 
 .contato_email::placeholder{
     font-family: "Poppins";
+    text-align: center;
     color: #326589;
-    background: url(/img/Email.svg) no-repeat;
-    padding-left: 2.5em;
-    background-position-y: -.30em;
+    background: url(../img/Email.svg) no-repeat;
+    background-position: 1em;
+}
+
+@media  screen and (min-width:1024px){
+    .contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .contato_titulo{
+        font-size: 24px;
+    }
+
+    .contato_email{
+        width: 30%;
+    }
+
+    .contato_descrição{
+        margin-right: 5em;
+        width: 30%;
+    }
 }
