--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -28,3 +28,13 @@
     font-size: 14px;
     font-weight: 700;
 }
+
+@media screen and (min-width:1024px){
+    .tópicos_titulo{
+        font-size: 24px;
+    }
+
+    .tópicos_link{
+        font-size:24px;
+    }
+}
