--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -6,3 +6,39 @@ hr{
     background-color: white;
     padding: 1em;
 }
+
+.lista-rodape{
+    display: none;
+}
+
+@media screen and (min-width:1024px){
+    .rodapé{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .lista-rodape{
+        display: block;
+    }
+
+    .lista-rodape-item{
+        display: flex;
+        align-items: center;
+        margin: 0.6em 0;
+    }
+
+    .lista-rodape-link{
+        color: gray;
+        text-decoration: none;
+        margin-left: 0.6em;
+    }
+
+    .lista-rodape-titulo{
+        font-size: 14px;
+        color: #858585;
+    }
+
+    .rodapé-titulo{
+        font-size: 24px;
+    }
+}
