--- a/styles/banner.css
+++ b/styles/banner.css
@@ -47,3 +47,17 @@
         background-position-y: -.20em;
     }
 }
+
+@media screen and (min-width:1728px){
+    .banner_pesquisa{
+        width: 35%;
+    }
+
+    .banner_pesquisa::placeholder{
+        background-position: 12em;
+    }
+
+    .banner{
+        padding: 5em 0;
+    }
+}
