--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -99,3 +99,9 @@
         margin: 2em auto;
     }
 }
+
+@media screen and (min-width:1728px){
+    .carrossel_container{
+        display: flex;
+    }
+}
