--- a/styles/header.css
+++ b/styles/header.css
@@ -51,6 +51,7 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .container_botao{
