--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -103,5 +103,32 @@
 @media screen and (min-width:1728px){
     .carrossel_container{
         display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+
+    .swiper-pagination{
+        margin: 1em 0;
+    }
+
+    .swiper{
+        width: 50%;
+    }
+
+    .descrição_titulo{
+        font-size:32px;
+    }
+
+    .descrição_texto{
+        font-size:16px;
+    }
+
+    .descrição{
+        margin-right: 2em;
+    }
+
+    .card{
+        width: 60%;
+        margin-left:3em;
     }
 }
