--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -98,6 +98,10 @@
         width: 40%;
         margin: 2em auto;
     }
+
+    .botões_ancora:active {
+        background-color: #326589;
+    }
 }
 
 @media screen and (min-width:1728px){
