--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,18 @@
 .cabeçalho_menu-hamburguer{
-    width: 24px;
-    height: 24px;
+    width: 45px;
+    height: 50px;
     background-image: url("../img/Menu.svg");
     background-repeat: no-repeat;
     background-position: center;
     display: inline-block;
+}
+
+.container_botao:checked~.container_rotulo>.cabeçalho_menu-hamburguer{
+    background-image: url("../img/Menu\ Aberto.png");
+}
+
+.container_botao:checked~.container_rotulo{
+    background: var(--azul-degrade);
 }
 
 .cabeçalho{
@@ -98,6 +106,23 @@
     .opções_botão:checked~.lista-menu{
         display: block;
         width: auto;
+    }
+
+    .opções_botão:checked~.opções_rotulo>.opções_item{
+        background: var(--azul-degrade);
+        color: white;
+    }
+
+    .opções_item{
+        padding:2em 1em;
+    }
+
+    .lista-menu_item:hover{
+        background:var(--azul-degrade);
+    }
+
+    .lista-menu_item:hover>.lista-menu_link{
+        -webkit-text-fill-color: white;
     }
 }
 
