--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -37,6 +37,11 @@
     .tópicos_link{
         font-size:24px;
     }
+
+    .tópicos_link:hover {
+        color: orange;
+        background-color: white;
+    }
 }
 
 @media screen and (min-width:1728px){
